# complexity-eval

./: Dockerfile  README.md  config.json  pyproject.toml
.claude/: settings.local.json
evaluation_function/: evaluation.py  preview.py
evaluation_function/analyzer/: __init__.py  code_runner.py  complexity_analyzer.py  feedback_generator.py  interpreter.py
evaluation_function/equivalence/: equivalence.py
evaluation_function/parser/: __init__.py  ast_builder.py  grammar.py  parser.py  preprocessor.py
evaluation_function/schemas/: __init__.py  ast_nodes.py  complexity.py  input_schema.py  output_schema.py
evaluation_function/tests/: __init__.py  conftest.py  test_analyzer.py  test_ast_builder.py  test_code_runner.py  test_complexity_schemas.py  test_equivalence.py  test_evaluation.py  test_evaluation_legacy.py  test_input_output_schemas.py  test_integration.py  test_interpreter.py  test_parser.py  test_preprocessor.py  test_preview.py  test_scope.py
